# img2ansi

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ascii.txt  block.txt  imgBlock.txt  imgBraile.txt  pyproject.toml
demo/: demo.md
docs/: Makefile  conf.py  example.ipynb  imginAscii.txt  imginBraile.txt  make.bat
src/img2ansi/: __init__.py  asciicmd.py  blockcmd.py  brailecmd.py  commands.py  img2ansi.py  img2ansi_cli.py  img2ascii.py  img2block.py  img2braile.py  imgAscii.txt  imgBlock.txt  imgBraile.txt
src/img2ansi/ascii/: ascii.py
src/img2ansi/convert/: converter.py
src/img2ansi/convert/ansi/: ansi.py
src/img2ansi/convert/ascii/: ascii.py
src/img2ansi/convert/block/: block.py
src/img2ansi/convert/braile/: braile.py
tests/: test_asciimode.py  test_blockmode.py  test_brailemode.py  test_img2ansi.py
