[tool.poetry]
name = "img2ansi"
version = "0.1"
description = "Convert image to ascii/unicode ANSI sequence"
authors = ["Daniel Bañuelos"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
