[tool.poetry]
name = "img2ansi"
version = "0.1"
description = "Convert image to ascii/unicode ANSI sequence"
authors = ["Daniel Bañuelos"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
img2ansi = "img2ansi.img2ansi:main"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
