[tool.poetry]
name = "img2ansi"
version = "0.1.0"
description = "Convert image to ascii/unicode ANSI sequence"
authors = ["Daniel Bañuelos <dax99993@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
img2ansi = "img2ansi.img2ansi:main"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
